tests/opaque_type_success/opaque_type_success.exp
Error ---------------------------------------------------------------------------------------------- testimport.js:58:31

Cannot access string literal `__type` on `C` because property `__type` is missing in `C` [1]. [incompatible-use]

   testimport.js:58:31
   58| function t(applicationType: C['__type']): number {
                                     ^^^^^^^^

References:
   testimport.js:58:29
   58| function t(applicationType: C['__type']): number {
                                   ^ [1]



Found 1 error
